# 验证器
add_executable(Validator Validator.cpp)

# Sort 排序
add_executable(selectSort Sort/selectSort/selectSort.cpp)
add_executable(bubbleSort Sort/bubbleSort/bubbleSort.cpp)
add_executable(insertSort Sort/insertSort/insertSort.cpp)

# Search 查找
add_executable(binarySearch Search/binarySearch/binarySearch.cpp)

# 链表